--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa": "^2.6.2",
     "koa-body": "^4.0.7",
     "koa-bodyparser": "^4.2.1",
+    "koa-multer": "^1.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.5",
